--- a/asset/index.html
+++ b/asset/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes” />
     <title>聊天室</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
